# ProjectGalaxy

./: .gitignore  ProjectGalaxy.code-workspace  README.md  pull_request_template.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  generic_report.md  issue_report.md  test_request.md
docs/: proposal.tex
pygalaxy/core/: config.py  galaxy.py  meta.py
pygalaxy/legacy/: cdfPlot.py  sampleAnalysis2.py
pygalaxy/legacy/galaxy/: agncount.py  agndist.py  colormean.py  colornearhist.py  datagen.py  datagen2.py  densityplot.py  densityplot_subsample.py  dividesample.py  galaxy.py  grouptypes.py  isblue.py  nearbyhist.py  pairtypes.py
pygalaxy/meta/: .common.conf
tests/: test_config.py  test_integration.py
